[package]
name = "log-stats"
version = "0.1.0"
edition = "2021"
description = "Analyze Apache/Nginx web access logs and report rich statistics"
license = "MIT"
readme = "README.md"
repository = ""
keywords = ["log", "apache", "nginx", "access-log", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "log-stats"
path = "src/main.rs"

[lib]
name = "log_stats"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "alloc"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
